--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -872,6 +872,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -957,6 +958,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.108;
 allow 45.84.107.182;
 allow 45.84.107.198;
