--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
+allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
@@ -997,6 +998,7 @@ allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
+allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
