--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -6,6 +6,7 @@ allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
+allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
