--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -669,10 +669,10 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
