--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 142.44.234.69;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
+allow 146.19.143.47;
 allow 146.59.126.232;
 allow 147.45.116.145;
 allow 147.45.78.34;
@@ -149,7 +150,6 @@ allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.26.159.157;
-allow 158.69.1.13;
 allow 160.119.249.240;
 allow 16.171.36.29;
 allow 162.210.173.17;
@@ -1111,7 +1111,6 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
-allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -1613,6 +1612,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:1::c758:3168;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
@@ -1683,6 +1683,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1738,7 +1739,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
