--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -221,7 +221,6 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
-allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -722,6 +721,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:1::c758:3168;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
