--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -142,6 +142,9 @@ set_real_ip_from 15.204.238.148;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
+set_real_ip_from 154.213.185.165;
+set_real_ip_from 154.213.185.183;
+set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.213.187.66;
@@ -192,7 +195,6 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
-set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.182;
@@ -269,7 +271,6 @@ set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
-set_real_ip_from 185.157.161.143;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
@@ -612,6 +613,7 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.87.115.187;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -1311,6 +1313,7 @@ set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:6f02::5366;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1352,6 +1355,9 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1672,6 +1678,7 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
+set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1819,6 +1826,7 @@ set_real_ip_from 77.48.28.236;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
+set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
