--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 139.99.8.57;
 allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
+allow 142.44.133.81;
 allow 142.44.234.69;
 allow 144.172.118.4;
 allow 144.172.118.55;
@@ -623,7 +624,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.88;
-allow 195.47.238.93;
+allow 195.47.238.89;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1280,7 +1281,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1550,8 +1550,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1714,6 +1714,7 @@ allow 45.148.10.169;
 allow 45.149.204.78;
 allow 45.151.122.34;
 allow 45.154.98.26;
+allow 45.59.112.103;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1851,7 +1852,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.38.130.105;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
