--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -141,6 +141,7 @@ deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:6600::4ce;
 deny 2604:a880:400:d0::28:6001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
@@ -392,7 +393,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
