--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -277,6 +277,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.157.161.143;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -957,6 +958,7 @@ allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -1392,6 +1394,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1677,7 +1680,6 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1711,6 +1713,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.14.165.118;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.149.204.78;
@@ -1758,6 +1761,7 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.181.156.44;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
@@ -1805,7 +1809,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 5.61.51.143;
 allow 57.128.171.125;
 allow 5.79.66.19;
 allow 62.171.137.169;
