--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -504,6 +504,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0a:c801:1:5::57;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
