--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -82,7 +82,6 @@ set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.124.143;
-set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -272,7 +271,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -499,6 +497,7 @@ set_real_ip_from 185.40.4.132;
 set_real_ip_from 185.40.4.149;
 set_real_ip_from 185.40.4.150;
 set_real_ip_from 185.40.4.20;
+set_real_ip_from 185.40.4.22;
 set_real_ip_from 185.40.4.29;
 set_real_ip_from 185.40.4.38;
 set_real_ip_from 185.40.4.44;
@@ -610,7 +609,6 @@ set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
-set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
@@ -1582,6 +1580,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:20;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:22;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
@@ -1738,7 +1737,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
